# baratech

./: .gitignore  README.md  go.mod  makefile
domain/: build.go  build_goal.go  core.go  cpu.go  errors.go  mobo.go  money.go  ram.go
internal/domain/: build.go  core.go  cpu.go  mobo.go
internal/mocks/: BuildUsecase.go  CoreRepository.go  CoreUsecase.go  CpuRepository.go  CpuUsecase.go  cpu_core.go  mock_core.go  mock_cpu.go
internal/usecase/: build_usecase_test.go  core_usecase.go  core_usecase_test.go
server/: pyproject.toml  test_build.py
server/src/core/application/services/: performance_calculator.py
server/src/core/application/usecases/: generate_config.py
server/src/core/domain/: budget_allocation.py  component.py  component_repository.py  components.py  machine_config.py  machine_focus.py
server/src/core/domain/models/: budget_allocation.py  component_repository.py  components.py  machine_config.py
server/src/core/domain/ports/repositories/: repositories.py
server/src/core/domain/ports/services/: performance_calculator.py
server/src/core/infra/: in_memory_component_repository.py
server/src/core/usecase/: generate_config.py  generate_specs.py
server/src/infra/: in_memory_component_repository.py
server/tests/unit/usecase/: test_generate_config.py
server/tests/usecase/: test_generate_config.py
usecase/: build.go  build_test.go  build_usecase.go  build_usecase_test.go  core_usecase.go  core_usecase_test.go  cpu_usecase.go  cpu_usecase_test.go  mobo_usecase.go
web/: index.html  package-lock.json  package.json
web/src/: App.css  (+3 more)
(+15 files in other folders)
