[project]
name = "baratech"
version = "0.1.0"
description = ""
authors = [
    {name = "Vinicius Boroto",email = "vinicius.boroto@fulltime.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "baratech", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
