[project]
name = "baratech"
version = "0.1.0"
description = ""
authors = [
    {name = "Vinicius Boroto",email = "vinicius.boroto@fulltime.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "baratech", from = "src"}]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
